--- a/MoneyNow/Views/Home/Index.cshtml
+++ b/MoneyNow/Views/Home/Index.cshtml
@@ -125,9 +125,9 @@
         }
         window.fbAsyncInit = function () {
             FB.init({
-                appId: '1122340924460110',
+                appId: '1701161323448276',//'1122340924460110',
                 xfbml: true,
-                version: 'v2.2'
+                version: 'v2.5'
             });
             //FB.login(fbLoginCallback, { scope: 'public_profile,email,user_friends, publish_actions' });
             FB.getLoginStatus(function (response) {
